# invenio_med

./: .dockerignore  .env_example  .flake8  .gitignore  Django.Dockerfile  README.md  docker-compose.yml  mypy.ini  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
appointments/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_initial.py
appointments/templates/appointments/: appointment_confirm_delete.html  appointment_create.html  appointment_detail.html  appointment_list.html  appointment_update.html  result_confirm_delete.html  result_create.html  result_detail.html  result_list.html  result_update.html
blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_create.html  blog_detail.html  blog_list.html  blog_update.html
catalog/: admin.py  forms.py  models.py  tests.py  translation.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: service_confirm_delete.html  service_create.html  service_detail.html  service_list.html  service_update.html
chatbot/: urls.py  views.py
config/: settings.py  urls.py
fixtures/: blogs.json  services.json
media/blog/: blood.avif
pages/: admin.py  apps.py  forms.py  models.py  tests.py  translation.py  urls.py  views.py
pages/migrations/: 0001_initial.py
static/css/: chat.css
static/js/: chat.js
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+15 files in other folders)
